# uvdar_calibrator

./: .flake8  CLAUDE.md  README.md  ocam_calibration.py  ocam_calibration_step_gui.py  package.xml  setup.cfg  setup.py
doc/: capturing-images.md  command-line.md  ros2-package.md  using-the-gui.md
test/: test_copyright.py  test_flake8.py
uvdar_calibrator/: __init__.py  __main__.py  board.py  calibrator.py  cli.py  coverage.py  detection.py  gui.py  live_node.py  ocam_model.py  plots.py
uvdar_calibrator/apps/: cli.py  gui.py  live_node.py
uvdar_calibrator/diagnostics/: plots.py
uvdar_calibrator/engine/: calibrator.py  coverage.py  detection.py  ocam_model.py
